[gd_scene load_steps=6 format=3 uid="uid://bu1thr0dl5aee"]

[ext_resource type="Script" uid="uid://dxyht8d00s0nn" path="res://script/upgrade_character.gd" id="1_r6u17"]
[ext_resource type="Texture2D" uid="uid://bm1pv3ti0ctyh" path="res://assets/Menu/MainMenu.png" id="2_oe8fi"]
[ext_resource type="FontFile" uid="uid://bowetpmlda58l" path="res://font/JS Wansika Italic.ttf" id="3_oe8fi"]
[ext_resource type="AudioStream" uid="uid://c61le5kljvqoy" path="res://Sound/Click.MP3" id="4_0ffa2"]
[ext_resource type="AudioStream" uid="uid://yqg5o2ua3q0c" path="res://Sound/khaawainphraraachsamnak-remix.mp3" id="5_oe8fi"]

[node name="UpgradeCharacter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r6u17")

[node name="BG" type="TextureRect" parent="."]
modulate = Color(0.564962, 0.564962, 0.564962, 1)
layout_mode = 0
offset_right = 1159.0
offset_bottom = 658.0
texture = ExtResource("2_oe8fi")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 390.0
offset_top = 156.0
offset_right = 729.0
offset_bottom = 211.0
theme_override_fonts/font = ExtResource("3_oe8fi")
theme_override_font_sizes/font_size = 40
text = "UPGRADE CHARACTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QTERangeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 310.0
offset_top = 352.0
offset_right = 856.0
offset_bottom = 407.0
theme_override_fonts/font = ExtResource("3_oe8fi")
theme_override_font_sizes/font_size = 40
text = "QTE ต้องกด : %d - %d คำ ในการสังหารศัตรู"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 218.0
offset_right = 695.0
offset_bottom = 332.0

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_oe8fi")
theme_override_font_sizes/font_size = 40
text = "Current Level : Lv.1"

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_oe8fi")
theme_override_font_sizes/font_size = 40
text = "Score : 24"

[node name="Upgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 429.0
offset_right = 651.0
offset_bottom = 492.0
theme_override_fonts/font = ExtResource("3_oe8fi")
theme_override_font_sizes/font_size = 40
disabled = true
text = "อัปเกรดตัวละคร"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 458.0
offset_top = 508.0
offset_right = 641.0
offset_bottom = 571.0
theme_override_fonts/font = ExtResource("3_oe8fi")
theme_override_font_sizes/font_size = 40
text = "กลับสู่เมนูหลัก"

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0ffa2")
volume_db = 10.0

[node name="BGSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_oe8fi")
volume_db = -5.0

[connection signal="pressed" from="Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_button_pressed"]
